Fix a typo with nabla

--- a/slides/slides.tex
+++ b/slides/slides.tex
@@ -1198,7 +1198,7 @@
       \]
     \item Final step: Influence on some target example $t$:
       \[
-        \nabla \frac{d}{d\varepsilon} L(t; \theta^*_{z, z_\delta, \varepsilon}) \approx
+        \frac{d}{d\varepsilon} L(t; \theta^*_{z, z_\delta, \varepsilon}) \approx
         \nabla L(t; \theta^*) \cdot \frac{d}{d\varepsilon} \Delta_{z, z_\delta, \varepsilon}
       \]
 
